feat(UI): improved questionaire and framework selection
